--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h2>Dog Breed Viewer</h2>
+
+    <label for="breedSelect">Choose a dog breed:</label>
+    <select id="breedSelect">
+      <option value="retriever">Retriever</option>
+      <option value="beagle">Beagle</option>
+      <option value="bulldog">Bulldog</option>
+      <option value="poodle">Poodle</option>
+      <option value="husky">Husky</option>
+      <option value="dachshund">Dachshund</option>
+    </select>
+    <button id="fetchButton">Fetch Dogs</button>
+
+    
     <main>
       <img id="dog1" src="" alt="" />
       <img id="dog2" src="" alt="" />
